data/derived/comb/progs/unify/prog0718.ml.out
Characters 512-520:
  | Tan a		      -> "sin(pi*"^(expr a)^")/cos(pi*"^(expr a)")";;
                                                   ^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
